# parki

./: .gitignore  CITATION.cff  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: analysis.yml  documentation.yml  examples.yml  formatting.yml  test_cpu.yml  test_cpu_linux.yml
analysis/cycle_counts/: Makefile  README.md  generate_rational_code.py  main.cu  rational_code_xmax6.cu
analysis/distributed/: analyze_ewald_mpi.py  time_ewald.py
analysis/erf-approximation/: RatApproxAAA.jl  RatTools.jl  fix_julia_load_path.jl  main.jl  main_2_horner.jl
analysis/ewald/: _params.py  _utils.py  analyze_accuracy.py  analyze_dtypes.py  analyze_ewald_portability.py  analyze_g2p_methods.py  analyze_g2p_performance_models.py  analyze_p2g_methods.py  analyze_p2g_performance_models.py  analyze_p2g_portability.py  analyze_p2p_methods.py  analyze_p2p_performance_models.py  analyze_p2p_portability.py  analyze_p2p_workloads.py  analyze_particle_distributions.py  analyze_roofline_model.py  time_dtypes.py  time_ewald.py  time_g2p_methods.py  time_p2g_methods.py  time_p2p_methods.py  time_p2p_workloads.py  time_particle_distributions.py
doc/source/: conf.py  index.rst
examples/: batched_celllist.py  celllist.py  periodic_celllist.py
examples/ewald/: laplace3p.py  stokes1p.py  stokes3p.py
parkipy/: __init__.py  _celllist.py  utils.py
parkipy/_pk_kernels/: _celllist.py  preprocess.py
parkipy/distributed/: __init__.py  _utils.py
parkipy/ewald/: __init__.py  _ewald.py  (+5 more)
tests/: test_celllists.py  test_distributed_ewald.py  test_ewald.py  test_reference.py
(+42 files in other folders)
